refactor: Rename project and update theme styles
Rebrands the application from "Soft Rose Attendance System" to "حضور وانصراف HR" and updates the theme to a blue-based color palette. Includes minor adjustments to date calculations and comments within utility functions for clarity.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soft-rose-attendance-system",
+  "name": "حضور-وانصراف-hr",
   "private": true,
   "version": "0.0.0",
   "type": "module",
